--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
           echo "Hello, World!"
 
   build:
+    runs-on: ubuntu-latest
     needs: [create-release]
     steps:
       - name: "Build"
