Add closing quote

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,5 +20,6 @@ jobs:
         shell: bash
         run: |
           cargo_version=$(cargo --version)
-          printf "Cargo Version: $cargo_version
+          printf "Cargo Version: %s\n" $cargo_version
+
 
