--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,22 +4,34 @@ on:
   push
 
 jobs:
+  bump:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Bump Version
+        shell: bash
+        run: |
+          echo: Bumping Version
+          sleep 10
+
   create-release:
     runs-on: ubuntu-latest
+    needs: [bump]
     steps:
       - name: Say Hello
         shell: bash
         run: |
-          echo "Hello, World!"
+          echo "Creating Github Release"
+          sleep 10
 
   build:
     runs-on: ubuntu-latest
-    needs: [create-release]
+    needs: [bump, create-release]
     steps:
       - name: "Build"
         shell: bash
         run: |
           cargo_version=$(cargo --version)
           echo "Cargo Version: $cargo_version"
+          sleep 10
 
 
