--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,8 @@ jobs:
       - name: Bump Version
         shell: bash
         run: |
-          echo: Bumping Version
+          echo "Bumping Version"
+          sleep 10
 
   create-release:
     runs-on: ubuntu-latest
@@ -20,15 +21,17 @@ jobs:
         shell: bash
         run: |
           echo "Creating Github Release"
+          sleep 10
 
   build:
     runs-on: ubuntu-latest
-    needs: [bump, create-release]
+    needs: [bump]
     steps:
       - name: "Build"
         shell: bash
         run: |
           cargo_version=$(cargo --version)
           echo "Cargo Version: $cargo_version"
+          sleep 10
 
 
