--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,14 +14,26 @@ jobs:
           sleep 10
 
   create-release:
-    runs-on: ubuntu-latest
     needs: [bump]
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - platform: linux
+            os: ubuntu-latest
+            arch: x64
+          - platform: macos
+            os: macos-latest
+            arch: aarch64
+          - platform: windows
+            os: windows-latest
+            arch: x64
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Say Hello
+      - name: Build ${{ matrix.platform }}-${{ matrix-arch }}
         shell: bash
         run: |
-          echo "Creating Github Release"
-          sleep 10
+          echo "Building ${{ matrix.platform }}-${{ matrix-arch }}"
 
   build:
     runs-on: ubuntu-latest
