--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Release
 
 on:
-  - push
-  - workflow_dispatch:
+  push:
+  workflow_dispatch:
     inputs:
       level:
         description: 'The level to bump for the release'
