--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,11 +18,26 @@ jobs:
   bump:
     runs-on: ubuntu-latest
     steps:
+      - name: Install cargo-workspaces
+        uses: baptiste0928/cargo-install@v3
+        with:
+          crate: cargo-workspaces
+
+      - name: Bump Version
+        if: github.ref == 'refs/heads/main'
+        run: |
+          cargo release version ${{ inputs.level }} -x --no-confirm
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "[skip ci] Bump Version"
+          git push
       - name: Bump Version
         shell: bash
         run: |
           echo "Bumping Version"
           sleep 10
+          version=$(cargo workspaces list --json | jq '.[0].version')
 
   create-release:
     runs-on: ubuntu-latest
