--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,6 @@
 name: Release
 
 on:
-  push:
   workflow_dispatch:
     inputs:
       level:
@@ -19,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    outputs:
+      version: ${{ steps.bump.outputs.version }}
     steps:
       - name: Install cargo-workspaces
         uses: baptiste0928/cargo-install@v3
@@ -29,34 +30,30 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Bump Version
+        id: bump
         if: github.ref == 'refs/heads/main'
         shell: bash
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          cargo workspaces version patch -y --allow-branch main -m "Release %v [skip ci]"
-
-      - name: Capture Version
-        shell: bash
-        run: |
+          cargo workspaces version patch -y --allow-branch main -m "Release %v [skip ci]" --no-individual-tags
           version=$(cargo workspaces list --json | jq '.[0].version')
           echo "New Version: $version"
-        
+          echo "version=$version" >> "$GITHUB_OUTPUT"
 
   create-release:
     runs-on: ubuntu-latest
     needs: [bump]
     steps:
-      - name: "Build"
-        shell: bash
-        run: |
-          cargo_version=$(cargo --version)
-          echo "Cargo Version: $cargo_version"
-          sleep 10
+      - name: Create GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          version=${{ needs.bump.outputs.version }}
+        run: gh release create v{$version} --draft --verify-tag --title v${version}
 
   build:
     name: ${{ matrix.platform }}-${{ matrix.arch }}
-    needs: [bump]
+    needs: [create-release]
     strategy:
       fail-fast: true
       matrix:
