--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Create GitHub Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          version=${{ needs.bump.outputs.version }}
-        run: gh release create v$version --draft --verify-tag --title v$version
+          version: ${{ needs.bump.outputs.version }}
+        run: gh release create v${version} --draft --verify-tag --title v${version}
 
   build:
     name: ${{ matrix.platform }}-${{ matrix.arch }}
