Add Job for Finalizing release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [bump]
     steps:
+      - name: Checkout Tag
+        uses: actions/checkout@v4
+        with:
+          ref: v${{ needs.bump.outputs.version }}
       - name: Create GitHub Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -53,7 +57,7 @@ jobs:
 
   build:
     name: ${{ matrix.platform }}-${{ matrix.arch }}
-    needs: [bump]
+    needs: [create-release]
     strategy:
       fail-fast: true
       matrix:
@@ -69,9 +73,23 @@ jobs:
             arch: x86_64
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Checkout Tag
+        uses: actions/checkout@v4
+        with:
+          ref: v${{ needs.bump.outputs.version }}
       - name: Build ${{ matrix.platform }}-${{ matrix.arch }}
         shell: bash
         run: |
           echo "Building ${{ matrix.platform }}-${{ matrix.arch }}"
 
-
+  finalize-release:
+    name: Finalize Release
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Finalize Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          version: ${{ needs.bump.outputs.version }}
+        shell: bash
+        run: gh release edit v${version} --draft=false --latest
