--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           cargo workspaces version patch -y --allow-branch main -m "Release %v [skip ci]" --no-individual-tags
-          version=$(cargo workspaces list --json | jq '.[0].version')
+          version=$(cargo workspaces list --json | jq '.[0].version' -r)
           echo "New Version: $version"
           echo "version=$version" >> "$GITHUB_OUTPUT"
 
