--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
     name: Bump Version
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.bump.outputs.version }}
+      version: ${{ steps.capture.outputs.version }}
     steps:
       - name: Install cargo-workspaces
         uses: baptiste0928/cargo-install@v3
@@ -38,6 +38,10 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           cargo workspaces version patch -y --allow-branch main -m "Release %v [skip ci]" --no-individual-tags
+      - name: Capture Bump
+        id: capture
+        shell: bash
+        run: |
           version=$(cargo workspaces list --json | jq '.[0].version' -r)
           echo "New Version: $version"
           echo "version=$version" >> "$GITHUB_OUTPUT"
