--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,8 @@ on:
 permissions: write-all
 
 jobs:
-  bump:
-    name: Bump Version
+  pre-build:
+    name: Pre Build
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.capture.outputs.version }}
@@ -31,42 +31,35 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Bump Version
-        id: bump
         if: github.ref == 'refs/heads/main'
         shell: bash
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           cargo workspaces version ${{ inputs.level }} -y --allow-branch main -m "Release %v [skip ci]" --no-individual-tags --force '*'
-      - name: Capture Bump
+
+      - name: Capture Version
         id: capture
         shell: bash
         run: |
           version=$(cargo workspaces list --json | jq '.[0].version' -r)
-          echo "New Version: $version"
+          echo "Release Version: v{$version}"
           echo "version=$version" >> "$GITHUB_OUTPUT"
 
-  create-release:
-    name: Create Release
-    runs-on: ubuntu-latest
-    needs: [bump]
-    steps:
-      - name: Checkout Tag
-        uses: actions/checkout@v4
-        with:
-          ref: v${{ needs.bump.outputs.version }}
       - name: Create GitHub Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ needs.bump.outputs.version }}
         run: gh release create v${version} --draft --verify-tag --title v${version}
 
+
   build:
     name: Build ${{ matrix.platform }}-${{ matrix.arch }}
-    needs: [bump, create-release]
+    needs: [pre-build]
     strategy:
       fail-fast: true
       matrix:
+        binary: [actions-playground]
         include:
           - platform: linux
             os: ubuntu-latest
@@ -82,24 +75,25 @@ jobs:
       - name: Checkout Tag
         uses: actions/checkout@v4
         with:
-          ref: v${{ needs.bump.outputs.version }}
+          ref: v${{ needs.pre-release.outputs.version }}
       - name: Build ${{ matrix.platform }}-${{ matrix.arch }}
         shell: bash
         run: |
           echo "Building ${{ matrix.platform }}-${{ matrix.arch }}"
 
-  finalize-release:
-    name: Finalize Release
+  post-build:
+    name: Post Build
     runs-on: ubuntu-latest
-    needs: [bump, build]
+    needs: [pre-build, build]
     steps:
       - name: Checkout Tag
         uses: actions/checkout@v4
         with:
-          ref: v${{ needs.bump.outputs.version }}
+          ref: v${{ needs.pre-release.outputs.version }}
       - name: Finalize Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ needs.bump.outputs.version }}
         shell: bash
         run: gh release edit v${version} --draft=false --latest
+
