--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       level:
-        description: 'The level to bump for the release'
+        description: 'Version Bump Level'
         type: choice
         required: false
         default: patch
@@ -16,8 +16,8 @@ on:
 permissions: write-all
 
 jobs:
-  pre-build:
-    name: Pre Build
+  pre-release:
+    name: Pre Release
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.capture.outputs.version }}
@@ -49,13 +49,13 @@ jobs:
       - name: Create GitHub Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          version: ${{ needs.bump.outputs.version }}
+          version: ${{ needs.pre-release.outputs.version }}
         run: gh release create v${version} --draft --verify-tag --title v${version}
 
 
   build:
     name: Build ${{ matrix.platform }}-${{ matrix.arch }}
-    needs: [pre-build]
+    needs: [pre-release]
     strategy:
       fail-fast: true
       matrix:
@@ -81,10 +81,10 @@ jobs:
         run: |
           echo "Building ${{ matrix.platform }}-${{ matrix.arch }}"
 
-  post-build:
-    name: Post Build
+  post-release:
+    name: Post Release
     runs-on: ubuntu-latest
-    needs: [pre-build, build]
+    needs: [pre-release, build]
     steps:
       - name: Checkout Tag
         uses: actions/checkout@v4
@@ -93,7 +93,7 @@ jobs:
       - name: Finalize Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          version: ${{ needs.bump.outputs.version }}
+          version: ${{ needs.pre-release.outputs.version }}
         shell: bash
         run: gh release edit v${version} --draft=false --latest
 
