--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ on:
 permissions: write-all
 
 env:
-  binary: actions-playground
+  BINARY_NAME: actions-playground
 
 jobs:
   pre-release:
@@ -78,10 +78,57 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: v${{ needs.pre-release.outputs.version }}
+
       - name: Build ${{ matrix.platform }}-${{ matrix.arch }}
         shell: bash
         run: |
-          echo "Building ${binary} for ${{ matrix.platform }}-${{ matrix.arch }}"
+          echo "Building ${BINARY_NAME} for ${{ matrix.platform }}-${{ matrix.arch }}"
+
+      - name: Enable Rust Dependency Caching
+        uses: Swatinem/rust-cache@v2 
+
+      - name: Build Binary
+        shell: bash
+        run: |
+          cargo build --release
+          if [ "${{ matrix.platform }}" = "windows" ]; then
+            binary_path="target/release/${BINARY_NAME}.exe"
+          else
+            binary_path="target/release/${BINARY_NAME}"
+          fi
+          echo "BINARY_PATH=$binary_path" >> $GITHUB_ENV
+
+      - name: Strip Binary
+        if: matrix.platform == 'linux' || matrix.platform == 'macos'
+        run: strip "$BINARY_PATH"
+
+      - name: Create Archive
+        shell: bash
+        run: |
+          version="${{ needs.create-release.outputs.version }}"
+          archive_prefix="${BINARY_NAME}-${version}-${{matrix.platform}}-${{matrix.arch}}"
+          mkdir -p "${archive_prefix}" >> $GITHUB_ENV
+          cp "$BINARY_PATH" "$archive_prefix"
+          if [ "${{ matrix.platform }}" = "windows" ]; then
+            7z a "${archive_prefix}.zip" "${archive_prefix}"
+            certutil -hashfile "${archive_prefix}.zip" SHA256 > "${archive_prefix}.zip.sha256"
+            echo "ARCHIVE=${archive_prefix}.zip" >> $GITHUB_ENV
+            echo "ARCHIVE_SUM=${archive_prefix}.zip.sha256" >> $GITHUB_ENV
+          else
+            tar czf "${archive_prefix}.tar.gz" "${archive_prefix}"
+            shasum -a 256 "${archive_prefix}.tar.gz" > "${archive_prefix}.tar.gz.sha256"
+            echo "ARCHIVE=${archive_prefix}.tar.gz" >> $GITHUB_ENV
+            echo "ARCHIVE_SUM=${archive_prefix}.zip.sha256" >> $GITHUB_ENV
+          fi          
+
+      - name: Upload Release Archive
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
+        run: |
+          version="${{ needs.create-release.outputs.version }}"
+          gh release upload v"$version" "${ARCHIVE}" "${ARCHIVE_SUM}"
+
 
   post-release:
     name: Post Release
