--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,7 @@ jobs:
           - platform: windows
             os: windows-latest
             arch: x86_64
+
     outputs:
       linux-x86_64_sha256: ${{ steps.nix_upload.outputs.linux-x86_64_sha256 }}
       linux-x86_64_artifact: ${{ steps.nix_upload.outputs.linux-x86_64_artifact }}
@@ -80,6 +81,7 @@ jobs:
       macos-arm64_artifact: ${{ steps.nix_upload.outputs.darwin-arm64_artifact }}
       macos-x86_64_sha256: ${{ steps.nix_upload.outputs.darwin-x86_64_sha256 }}
       macos-x86_64_artifact: ${{ steps.nix_upload.outputs.darwin-x86_64_artifact }}
+
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout Tag
@@ -127,8 +129,8 @@ jobs:
             archive_sum=${archive_prefix}.tar.gz.sha256
             tar czf "${archive}" "${archive_prefix}"
             shasum -a 256 "${archive}" > "${archive_sum}"
-            echo "${{ matrix.platform }}-${{ matrix.arch}_artifact=$DOWNLOAD_PREFIX/${version}/${archive}" >> $GITHUB_OUTPUT
-            echo "${{ matrix.platform }}-${{ matrix.arch}_sha256=$(cat $archive_sum | awk '{print $NF}')" >> $GITHUB_OUTPUT
+            echo "${{ matrix.platform }}-${{ matrix.arch}}_artifact=$DOWNLOAD_PREFIX/${version}/${archive}" >> $GITHUB_OUTPUT
+            echo "${{ matrix.platform }}-${{ matrix.arch}}_sha256=$(cat $archive_sum | awk '{print $NF}')" >> $GITHUB_OUTPUT
           fi          
           echo "ARCHIVE=${archive}" >> $GITHUB_ENV
           echo "ARCHIVE_SUM=${archive_sum}" >> $GITHUB_ENV
