--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -176,7 +176,7 @@ jobs:
           payload: |
             {
               "name": "actions-playground",
-              "description: "Actions Playground CLI",
+              "description": "Actions Playground CLI",
               "homepage: "example.com",
               "version": "${{ needs.pre-release.outputs.version }}",
               "linux-x86_64_archive": "${{ needs.build.outputs.linux-x86_64_archive }}",
