Change Homebrew Update Token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -164,12 +164,11 @@ jobs:
     name: Update Homebrew Forumula
     needs: [pre-release, build]
     runs-on: ubuntu-latest
-
     steps:
       - name: Dispatch event to jimmiebfulton/homebrew-tap
         uses: ph-fritsche/action-dispatch@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
           type: repository
           repo: jimmiebfulton/homebrew-tap
           ident: update-formula
