--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,12 +75,10 @@ jobs:
             arch: x86_64
 
     outputs:
-      linux-x86_64_sha256: ${{ steps.nix_upload.outputs.linux-x86_64_sha256 }}
-      linux-x86_64_artifact: ${{ steps.nix_upload.outputs.linux-x86_64_artifact }}
-      macos-arm64_sha256: ${{ steps.nix_upload.outputs.darwin-arm64_sha256 }}
-      macos-arm64_artifact: ${{ steps.nix_upload.outputs.darwin-arm64_artifact }}
-      macos-x86_64_sha256: ${{ steps.nix_upload.outputs.darwin-x86_64_sha256 }}
-      macos-x86_64_artifact: ${{ steps.nix_upload.outputs.darwin-x86_64_artifact }}
+      linux-x86_64_artifact: ${{ steps.create-archive.outputs.linux-x86_64_archive }}
+      linux-x86_64_sha256: ${{ steps.create-archive.outputs.linux-x86_64_sha256 }}
+      macos-arm64_artifact: ${{ steps.create-archive.outputs.macos-arm64_archive }}
+      macos-arm64_sha256: ${{ steps.create-archive.outputs.macos-arm64_sha256 }}
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -113,6 +111,7 @@ jobs:
         run: strip "$BINARY_PATH"
 
       - name: Create Archive
+        id: create-archive
         shell: bash
         run: |
           version="v${{ needs.pre-release.outputs.version }}"
@@ -129,7 +128,7 @@ jobs:
             archive_sum=${archive_prefix}.tar.gz.sha256
             tar czf "${archive}" "${archive_prefix}"
             shasum -a 256 "${archive}" > "${archive_sum}"
-            echo "${{ matrix.platform }}-${{ matrix.arch}}_artifact=$DOWNLOAD_PREFIX/${version}/${archive}" >> $GITHUB_OUTPUT
+            echo "${{ matrix.platform }}-${{ matrix.arch}}_archive=$DOWNLOAD_PREFIX/${version}/${archive}" >> $GITHUB_OUTPUT
             echo "${{ matrix.platform }}-${{ matrix.arch}}_sha256=$(cat $archive_sum | awk '{print $NF}')" >> $GITHUB_OUTPUT
           fi          
           echo "ARCHIVE=${archive}" >> $GITHUB_ENV
