Extend update_homebrew_forumula variables
Add binary, description, and homepage variables

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -172,6 +172,9 @@ jobs:
           ident: update-formula
           payload: |
             {
+              "binary": "actions-playground",
+              "homepage": "https://github.com/${{ github.repository }}",
+              "description": "Actions Playground",
               "version": "${{ needs.pre-release.outputs.version }}",
               "linux-x86_64_archive": "${{ needs.build.outputs.linux-x86_64_archive }}",
               "linux-x86_64_sha256": "${{ needs.build.outputs.linux-x86_64_sha256 }}",
