--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         shell: bash
         run: |
           git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.email github-actions@users.noreply.github.com
           cargo workspaces version ${{ inputs.level }} -y --allow-branch main -m "Release %v [skip ci]" --no-individual-tags --force '*'
 
       - name: Capture Version
@@ -158,17 +158,18 @@ jobs:
         shell: bash
         run: gh release edit v${version} --draft=false --latest
 
+
   update_homebrew_formula:
     name: Update Homebrew Forumula
     needs: [pre-release, build]
     runs-on: ubuntu-latest
     steps:
-      - name: Dispatch event to jimmiebfulton/homebrew-tap
+      - name: Dispatch event to ${{ github.repository_owner }}/homebrew-tap
         uses: ph-fritsche/action-dispatch@v1
         with:
           token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
           type: repository
-          repo: jimmiebfulton/homebrew-tap
+          repo: ${{ github.repository_owner }}/homebrew-tap
           ident: update-formula
           payload: |
             {
@@ -176,8 +177,8 @@ jobs:
               "homepage": "https://github.com/${{ github.repository }}",
               "description": "Actions Playground",
               "version": "${{ needs.pre-release.outputs.version }}",
-              "linux-x86_64_archive": "${{ needs.build.outputs.linux-x86_64_archive }}",
-              "linux-x86_64_sha256": "${{ needs.build.outputs.linux-x86_64_sha256 }}",
-              "macos-arm64_archive": "${{ needs.build.outputs.macos-arm64_archive }}",
-              "macos-arm64_sha256": "${{ needs.build.outputs.macos-arm64_sha256 }}"
+              "linux-x86_64_archive": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.linux-x86_64_archive }}",
+              "linux-x86_64_sha256": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.linux-x86_64_sha256 }}",
+              "macos-arm64_archive": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.macos-arm64_archive }}",
+              "macos-arm64_sha256": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.macos-arm64_sha256 }}"
             }
