--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ permissions: write-all
 
 env:
   BINARY_NAME: actions-playground
+  BINARY_HOMEPAGE: "https://github.com/${{ github.repository }}" 
+  BINARY_DESCRIPTION: "Actions Playground"
 
 jobs:
   pre-release:
@@ -173,9 +175,9 @@ jobs:
           ident: update-formula
           payload: |
             {
-              "binary": "actions-playground",
-              "homepage": "https://github.com/${{ github.repository }}",
-              "description": "Actions Playground",
+              "binary": "$BINARY_NAME",
+              "homepage": "$BINARY_HOMEPAGE",
+              "description": "$BINARY_DESCRIPTION",
               "version": "${{ needs.pre-release.outputs.version }}",
               "linux-x86_64_archive": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.linux-x86_64_archive }}",
               "linux-x86_64_sha256": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.linux-x86_64_sha256 }}",
