--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ env:
   BINARY_NAME: actions-playground
   BINARY_HOMEPAGE: "https://github.com/${{ github.repository }}" 
   BINARY_DESCRIPTION: "Actions Playground"
+  DOWNLOAD_PREFIX: "https://github.com/${{ github.repository }}/downloads"
 
 jobs:
   pre-release:
@@ -179,8 +180,8 @@ jobs:
               "homepage": "${{ env.BINARY_HOMEPAGE }}",
               "description": "${{ env.BINARY_DESCRIPTION }}",
               "version": "${{ needs.pre-release.outputs.version }}",
-              "linux-x86_64_archive": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.linux-x86_64_archive }}",
-              "linux-x86_64_sha256": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.linux-x86_64_sha256 }}",
-              "macos-arm64_archive": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.macos-arm64_archive }}",
-              "macos-arm64_sha256": "https://github.com/${{ github.repository }}/${{ needs.build.outputs.macos-arm64_sha256 }}"
+              "linux-x86_64_archive": "${{ env.DOWNLOAD_PREFIX }}/${{ needs.build.outputs.linux-x86_64_archive }}",
+              "linux-x86_64_sha256": "${{ env.DOWNLOAD_PREFIX }}/${{ needs.build.outputs.linux-x86_64_sha256 }}",
+              "macos-arm64_archive": "${{ env.DOWNLOAD_PREFIX }}/${{ needs.build.outputs.macos-arm64_archive }}",
+              "macos-arm64_sha256": "${{ env.DOWNLOAD_PREFIX }}/${{ needs.build.outputs.macos-arm64_sha256 }}"
             }
